# Cinder

./: .gitignore
android/: CMakeLists.txt
include/cinder/gl/: Environment.h  Fbo.h  Texture.h  platform.h
include/cinder/vk/: Batch.h  Buffer.h  CommandBuffer.h  CommandPool.h  Context.h  Descriptor.h  Device.h  Framebuffer.h  Image.h  ImageView.h  IndexBuffer.h  Pipeline.h  PipelineSelector.h  Presenter.h  Queue.h  RenderPass.h  RenderTarget.h  ShaderProg.h  Surface.h  Swapchain.h  Sync.h  Texture.h  TextureFont.h  UniformBuffer.h  UniformLayout.h  UniformView.h  VertexBuffer.h  VertexBufferMesh.h  func.h  glsl_types.h  platform.h  vk.h  wrapper.h
include/glesload/: gl_es_load.h
linux/: CMakeLists.txt
linux/CMakeModules/: CinderSources.cmake  FindFreetype2.cmake  FreetypeSources.cmake  cinderConfig.buildtree.cmake.in
linux/cmake/: Cinder.cmake  CinderIncludes.cmake  CinderSources.cmake  FindOSMesa.cmake
proj/cmake/: platform_linux.cmake
proj/vc2013/: cinder.sln  cinder.vcxproj  cinder.vcxproj.filters
samples/BasicApp/linux/: CMakeLists.txt
samples/BasicApp/linux/CMakeModules/: FindFontConfig.cmake
samples/CaptureBasic/src/: CaptureBasicApp.cpp
samples/TextureFont/vc2013/: TextureFont.sln  TextureFont.vcxproj
samples/_opengl/Cube/linux/: CMakeLists.txt
samples/_opengl/CubeMapping/linux/: CMakeLists.txt
samples/_opengl/DeferredShadingAdvanced/vc2013/: DeferredShadingAdvanced.sln
samples/_opengl/FboMultipleRenderTargets/assets/: multipleOut.frag  multipleOut_es3.frag
samples/_opengl/FboMultipleRenderTargets/src/: FboMultipleRenderTargetsApp.cpp
samples/_opengl/FboMultipleRenderTargets/vc2013/: FboMultipleRenderTargets.sln  FboMultipleRenderTargets.vcxproj
samples/_opengl/MotionBlurFbo/vc2013/: MotionBlurFbo.sln  MotionBlurFbo.vcxproj
samples/_opengl/MotionBlurVelocityBuffer/vc2013/: MotionBlurVelocityBuffer.sln  MotionBlurVelocityBuffer.vcxproj
samples/_opengl/NormalMappingBasic/src/: NormalMappingBasicApp.cpp
samples/_opengl/PickingFBO/vc2013/: PickingFBO.sln  PickingFBO.vcxproj
samples/_opengl/PostProcessingAA/vc2013/: PostProcessingAA.sln  PostProcessingAA.vcxproj
samples/_opengl/ShadowMappingBasic/vc2013/: ShadowMappingBasic.sln  ShadowMappingBasic.vcxproj
samples/_vulkan/ComputeBasic/src/: ComputeBasicApp.cpp
samples/_vulkan/NormalMapping/src/: NormalMappingApp.cpp
samples/_vulkan/ObjLoader/assets/: shader.frag  shader.vert
samples/_vulkan/ObjLoader/src/: ObjLoaderApp.cpp
samples/_vulkan/ObjLoader/vc2013/: ObjLoader.sln  ObjLoader.vcxproj
samples/_vulkan/PushConstants/src/: PushConstantsApp.cpp
samples/_vulkan/ShadowMapping/src/: ShadowMappingApp.cpp
samples/_vulkan/ShadowMappingBasic/src/: ShadowMappingBasicApp.cpp
samples/_vulkan/TextureFont/src/: TextureFontApp.cpp
samples/_vulkan/TextureFont/vc2013/: TextureFont.sln  TextureFont.vcxproj
samples/_vulkan_explicit/ComputeBasic/src/: ComputeBasicApp.cpp
samples/_vulkan_explicit/Cube/src/: CubeApp.cpp
samples/_vulkan_explicit/FishTornado/src/: FishTornadoApp.cpp  GpuFlocker.cpp  Light.cpp  Ocean.cpp
samples/_vulkan_explicit/ShadowMapping/src/: ShadowMappingApp.cpp
samples/_vulkan_explicit/ShadowMappingBasic/src/: ShadowMappingBasicApp.cpp
src/cinder/: GeomIo.cpp
src/cinder/app/: RendererVk.cpp
src/cinder/gl/: ConstantConversions.cpp  EnvironmentCore.cpp  EnvironmentEs.cpp  Fbo.cpp  Texture.cpp
src/cinder/vk/: Allocator.cpp  Batch.cpp  Buffer.cpp  CommandBuffer.cpp  CommandPool.cpp  Context.cpp  Descriptor.cpp  Device.cpp  Framebuffer.cpp  Image.cpp  ImageView.cpp  Pipeline.cpp  PipelineSelector.cpp  Presenter.cpp  Queue.cpp  RenderPass.cpp  RenderTarget.cpp  ShaderProg.cpp  Swapchain.cpp  Sync.cpp  Texture.cpp  TextureFont.cpp  UniformBuffer.cpp  UniformLayout.cpp  UniformView.cpp  Util.cpp  VertexBufferMesh.cpp  draw.cpp  func.cpp  glsl_types.cpp  wrapper.cpp
src/glesload/: gl_es_load.cpp
test/_opengl/FboAttachment/src/: FboAttachmentApp.cpp
test/_opengl/FboAttachment/vc2013/: FboAttachment.sln  FboAttachment.vcxproj  FboAttachment.vcxproj.filters
test/_opengl/FboAttachment/xcode/FboAttachment.xcodeproj/: project.pbxproj
test/_opengl/FboAttachment/xcode_ios/FboAttachment.xcodeproj/: project.pbxproj
test/_opengl/FboAttachments/src/: FboAttachmentsApp.cpp
test/_opengl/FboAttachments/vc2013/: FboAttachments.sln  FboAttachments.vcxproj  FboAttachments.vcxproj.filters
test/_opengl/FboAttachments/xcode/FboAttachments.xcodeproj/: project.pbxproj
test/_opengl/FboAttachments/xcode_ios/FboAttachments.xcodeproj/: project.pbxproj
test/_opengl/MultiDrawIndirect/assets/: InstancedModelMatrix.frag  InstancedModelMatrix.vert
test/_opengl/MultiDrawIndirect/linux/: CMakeLists.txt
test/_opengl/MultiDrawIndirect/src/: MultiDrawIndirectApp.cpp
test/_opengl/TextureMulitSample/src/: TextureMulitSampleApp.cpp
test/_opengl/TextureMulitSample/vc2013/: TextureMulitSample.sln  TextureMulitSample.vcxproj  TextureMulitSample.vcxproj.filters
test/_opengl/TextureMulitSample/xcode/TextureMulitSample.xcodeproj/: project.pbxproj
test/_opengl/TextureMultisample/src/: TextureMultisampleApp.cpp
test/_opengl/TextureMultisample/vc2013/: TextureMultisample.sln  TextureMultisample.vcxproj  TextureMultisample.vcxproj.filters
test/_vulkan/BasicApp/src/: BasicApp.cpp
test/_vulkan/BigUniformBuffer/src/: BigUniformBufferApp.cpp
test/_vulkan/BigUniformBuffer/vc2013/: BigUniformBuffer.sln  BigUniformBuffer.vcxproj  BigUniformBuffer.vcxproj.filters
test/_vulkan/DescriptorUpdates/assets/: shader_4.frag
test/_vulkan/DescriptorUpdates/src/: DescriptorUpdatesApp.cpp  Test2.cpp  Test4.cpp
test/_vulkan/Float32Framebuffers/assets/: shader.frag
test/_vulkan/Float32Framebuffers/src/: Float32FramebuffersApp.cpp
test/_vulkan/TextureFont/vc2013/: TextureFont.vcxproj.filters
test/_vulkan/UniformView/src/: UniformViewApp.cpp
test/_vulkan/UniformView/vc2013/: UniformView.sln  UniformView.vcxproj  UniformView.vcxproj.filters
tools/linux/: Cinder.cmake  cbuilder  cibuilder
vc2013/: cinder.vcxproj  cinder.vcxproj.filters
(+5 files in other folders)
